# wagthepig-harder

./: README.md  TODO  envrc.example  flake.nix  process-compose.yaml
.github/workflows/: build.yaml
backend/: .gitignore  Cargo.toml  devproxy.rs
backend/.sqlx/: query-079332766b130519613cd31c62703c8f202ecba41563ead6f6ed96653ae10ba1.json  query-3af8cacb7185fc14188adf42ed65a45e026e62f393fd77a384287ab0239f85b9.json  query-54462ac59f41960b155b2440a4b1fd234c50831f876a331b5d56aaf678e2757c.json  query-5a6278dfdc6b48bf088882b4bfd7df9323907f8e86f7e4f1c3868820181807dc.json  query-5c073b0f0b012255bb2071a031aa26c2a6e991b59a81594b39c1acc10cb544b5.json  query-76cd55aad33496b4243896e27fc648bb16402ddd7dfd3ea5039037c50e1c96fc.json  query-80e4ca9ecb242770a29a0f4fcf29fb5b2a930e0c72053ea60a20081f76fc264e.json  query-93c0d10f43310fcea2bffd1f9b4e9d5cdae7a52a74862ef41f47526c17a29076.json  query-9777ab789da9d42e7da4ee75ef30cdbb7fcf15410b154b0726c6a67aba064511.json  query-b5598151decb6321626139d0f9421f995812e32db8ff5da8b6e0b6d41aaa34ac.json  query-b8310fdf923d69b7a432d5a826d0606ed223fc73210a3f9540ed985d0df0f1b0.json  query-bdf95f7d98aba5bc543d77ad76d80edd7388717748f41397c9848efc4b293faa.json  query-e17f054749fc7ff55f9f669a6327e9b4d487ff72705548acc4cbd2759f712c0e.json  query-e532718bb791c5e25c4f53ea4de2fed8d70711b20d0e0dcab8c333fec9ffd6e3.json  query-e86e78f9f7335cd2e79521910d4c3518769e20234cbe2c183b2be4f9e39bac96.json  query-ee576494e0ed5a4b2c3f876325940e7a95ef3bcf3db9b6304f9cee1857a73e79.json  query-f6da295b74e76c68b59ed76f465500e08e62cbc30aae4162486855cb7283eba4.json  query-fccf69a82d11a16a1d8421ac9de9e9775e99df96212c79da4f9289d46bdbfa22.json
backend/database/: create.sql  schema.sql  sqlxmq.sql
backend/frontend/: .gitignore
backend/migrations/: 20240916213206_base-schema.down.sql  20240916213206_base-schema.up.sql  20240923231240_add_revocations.down.sql  20240923231240_add_revocations.up.sql  20240926214928_fix_ownership.down.sql  20240926214928_fix_ownership.up.sql  20240926215854_setup_timestamps.down.sql  20240926215854_setup_timestamps.up.sql  20250724202655_consolidated_mq.down.sql  20250724202655_consolidated_mq.up.sql  README.md
backend/semweb_api/: Cargo.toml
backend/semweb_api/src/: biscuits.rs  cachecontrol.rs  condreq.rs  error.rs  hypermedia.rs  lib.rs  spa.rs
backend/semweb_api/src/routing/: de.rs  mod.rs  render.rs
backend/semweb_api_derives/: Cargo.toml
backend/semweb_api_derives/src/: lib.rs
backend/semweb_api_derives/tests/: integration_tests.rs
backend/src/: biscuits.rs  db.rs  devproxy.rs  httpapi.rs  mailing.rs  main.rs  routing.rs  spa.rs
backend/src/httpapi/: semweb.rs
backend/src/resources/: authentication.rs  event.rs  game.rs  mod.rs  profile.rs  recommendation.rs
backend/src/routing/: de.rs  mod.rs  parser.rs
devsupport/: .gitignore  README.md  create_db.sql  mailpit_passwords  run_postgres.sh  seeds.sql  setup_nginx.sh  setup_postgres.sh  setup_test_database.sh  setup_tmux.sh  sqlx_migrations_table.sql  test_seeds.sql  wwnd.md
devsupport/nginx/: nginx.conf.envsubst  nginx.pid
devsupport/nginx/conf/: nginx.conf
devsupport/tls/backend/: ca.crt.pem  ca.csr  ca.key.pem  req.cfg  server.crt.pem  server.csr  server.key.pem  setup.sh
devsupport/tls/smtp/: req.cfg  setup.sh
frontend/: dist  elm.json  index.html
frontend/html/: index.html
frontend/js/: main.js
frontend/mod/elm-principled-hypermedia/: README.md  elm.json
frontend/mod/elm-principled-hypermedia/src/: Hypermedia.elm  LinkFollowing.elm  LocalUtilities.elm  ResourceUpdate.elm
frontend/mod/elm-updaters/: README.md  elm.json
frontend/mod/madhelm-auth/src/: Auth.elm
frontend/src/: Api.elm  Auth.elm  CompleteRegistration.elm  EventEdit.elm  Events.elm  Hypermedia.elm  Landing.elm  Login.elm  Main.elm  OutMsg.elm  Pages.elm  Profile.elm  Register.elm  ResourceUpdate.elm  Router.elm  State.elm  User.elm  ViewUtil.elm  elm.json
frontend/src/css/: forms.css  main.css  table.css  toast.css
frontend/src/elm/: Auth.elm  BGG.elm  BGGAPI.elm  CompleteRegistration.elm  Event.elm  EventEdit.elm  EventGames.elm  EventShow.elm  Events.elm  GameEdit.elm  Hypermedia.elm  Landing.elm  Login.elm  Main.elm  OutMsg.elm  Pages.elm  Players.elm  Profile.elm  Register.elm  ResourceUpdate.elm  Retries.elm  Router.elm  TableSort.elm  Updaters.elm  ViewUtil.elm  WhatShouldWePlay.elm
frontend/src/elm-mod/elm-principled-hypermedia/src/: Hypermedia.elm  LinkFollowing.elm  LocalUtilities.elm  ResourceUpdate.elm
frontend/src/elm-mod/elm-updaters/src/: Updaters.elm
frontend/src/elm-mod/madhelm-auth/: elm.json
frontend/src/elm-mod/madhelm-auth/src/: Auth.elm  State.elm
frontend/src/elm-mod/madhelm-viewutils/: elm.json
frontend/src/elm-mod/madhelm-viewutils/src/: TableSort.elm  ViewUtil.elm
frontend/src/elm/Game/: Create.elm  Edit.elm  View.elm
frontend/src/review/: elm.json
frontend/src/review/src/: ReviewConfig.elm
frontend/src/review/suppressed/: NoMissingTypeAnnotationInLetIn.json  NoUnused.CustomTypeConstructorArgs.json
frontend/src/tests/: Tests.elm
frontend/tests/: ApiTests.elm  Tests.elm
nix/backend/: config.nix  options.nix
