[package]
name = "wagthepig-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "~1.0.63"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "~1.38", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
futures-util = "0.3.30"
pin-project-lite = "0.2.14"

axum = { version = "~0.7", features = ["macros", "json"]}
axum-extra = { version = "0.9.3", features = ["query"] }
hyper = { version = "~1.4", features = ["client", "http1"] }
hyper-util = { version = "0.1.6", features = ["client-legacy", "http1", "tokio"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tower-livereload = "0.9.3"

serde = { version = "~1.0.204", features = ["derive"] }
serde_json = "~1.0.120"
base64 = "0.22.1"

bcrypt = "0.15.1"
biscuit-auth = "~5.0"
zeroize = { version = "~1.8", features = ["derive", "std"] }

notify = "~6.1"

sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
chrono = "0.4.38"
