[workspace]
members = ["semweb_api_derives"]

# per https://doc.rust-lang.org/cargo/reference/workspaces.html
# Note: when a root package is present, you can only operate on it using --package and --workspace flags.
#   wagthepig-backend is the "root package" of this workspace

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "wagthepig-backend"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semweb_api_derives = { path = "semweb_api_derives" }

thiserror = "~1.0.63"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "~1.38", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
futures-util = "0.3.30"
pin-project-lite = "0.2.14"

axum = { version = "~0.7", features = ["macros", "json"]}
axum-extra = { version = "0.9.3", features = ["query", "typed-header"] }
hyper = { version = "~1.4", features = ["client", "http1"] }
hyper-util = { version = "0.1.6", features = ["client-legacy", "http1", "tokio"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tower-livereload = "0.9.3"

serde = { version = "~1.0.204", features = ["derive"] }
serde_json = "~1.0.120"
base64 = "0.22.1"

bcrypt = "0.15.1"
biscuit-auth = "~5.0"
zeroize = { version = "~1.8", features = ["derive", "std"] }

notify = "~6.1"

sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
iri-string = { version = "0.7.4", features = ["serde"] }
sha2 = "0.10.8"
base64ct = { version = "1.6.0", features = ["alloc"] }
nom = "7.1.3"
regex = "1.10.6"
percent-encoding = "2.3.1"
