[package]
name = "semweb_api"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = "0.1"

axum = { version = "~0.7", features = ["macros", "json"]}
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
iri-string = { version = "0.7.4", features = ["serde"] }

serde = { version = "~1.0.204", features = ["derive"] }
serde_json = "~1.0.120"
percent-encoding = "2.3.1"
regex = "1.10.6"
nom = "7.1.3"

thiserror = "~1.0.63"

# feature livereload
notify = "~6.1"
tower-livereload = "0.9.3"

# feature devproxy?
hyper-util = { version = "0.1.6", features = ["client-legacy", "http1", "tokio"] }

# just for biscuits
biscuit-auth = "~5.0"
axum-extra = { version = "0.9.3", features = ["query", "typed-header"] }
futures = "0.3.30"
futures-util = "0.3.30"
pin-project-lite = "0.2.14"
hyper = { version = "~1.4", features = ["client", "http1"] }
tower = "0.4.13"
